--- a/report/ch/audited-small.yaml
+++ b/report/ch/audited-small.yaml
@@ -28,6 +28,11 @@ accounts-type: abridged-accounts
 title: Audited Small Company Accounts
 
 #############################################################################
+### Macros ##################################################################
+#############################################################################
+macros: //import report/ch/macros.yaml
+
+#############################################################################
 ### Report computations #####################################################
 #############################################################################
 computations: //import report/ch/frc102-computations.yaml
@@ -65,17 +70,17 @@ elements:
         element: revision-info
     - element: notes
 
-- //ref macros.balance-sheet-audited-small
-- //ref macros.profit-and-loss
+- //ref report.macros.balance-sheet-audited-small
+- //ref report.macros.profit-and-loss
 
 - //ref directors-report
 - //ref auditors-report
 - //ref accountants-report
 
-- //ref macros.title
-- //ref macros.consent
-- //ref macros.company-info
-- //ref macros.signature
-- //ref macros.revision
-- //ref macros.simple-notes
+- //ref report.macros.title
+- //ref report.macros.consent
+- //ref report.macros.company-info
+- //ref report.macros.signature
+- //ref report.macros.revision
+- //ref report.macros.simple-notes
 
