--- a/test/aud-full-rev.yaml
+++ b/test/aud-full-rev.yaml
@@ -24,8 +24,8 @@ report: //import report/ch/audited-full.yaml
 # pretty-print: true
 # Decimal places
 
-#metadata: //import metadata.yaml
-metadata: //import metadata-revised.yaml
+#metadata: //import test/metadata.yaml
+metadata: //import test/metadata-aud-rev.yaml
 
 directors-report: //import directors-report.yaml
 
