--- a/test/ct.yaml
+++ b/test/ct.yaml
@@ -24,8 +24,7 @@ report: //import report/hmrc/corp-tax.yaml
 # pretty-print: true
 # Decimal places
 
-metadata: //import metadata.yaml
-#metadata: //import metadata-revised.yaml
+metadata: //import test/metadata-ct.yaml
 
 directors-report: //import directors-report.yaml
 
