--- a/test/unaud-full.yaml
+++ b/test/unaud-full.yaml
@@ -24,8 +24,8 @@ report: //import report/ch/unaudited-full.yaml
 # pretty-print: true
 # Decimal places
 
-metadata: //import metadata.yaml
-#metadata: //import metadata-revised.yaml
+metadata: //import test/metadata-acc.yaml
+#metadata: //import test/metadata-acc-revised.yaml
 
 directors-report: //import directors-report.yaml
 
